--- a/templates/contact.html
+++ b/templates/contact.html
@@ -255,11 +255,11 @@
         <div class="row">
           <div>
             <label for="prenom">Prénom</label>
-            <input id="prenom" name="prenom" type="text" placeholder="Ex : Azaad" required />
+            <input id="prenom" name="prenom" type="text" placeholder="Ex : Sofiane" required />
           </div>
           <div>
             <label for="nom">Nom</label>
-            <input id="nom" name="nom" type="text" placeholder="Ex : Mabiala" required />
+            <input id="nom" name="nom" type="text" placeholder="Ex : Chila" required />
           </div>
         </div>
 
